--- a/gb/15/9/19/n4531524.md
+++ b/gb/15/9/19/n4531524.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/mmmcpr3473/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mmmcpr3473/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mmmcpr3473/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mmmcpr3473/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mmmcpr3473/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mmmcpr3473/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mmmcpr3473/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mmmcpr3473/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mmmcpr3473/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mmmcpr3473/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mmmcpr3473/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mmmcpr3473/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mmmcpr3473/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mmmcpr3473/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美国会听证 要求在奥习会提出停止迫害法轮功等问题</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2015/09/1509191157252192-600x400.jpg" />
 <h6>9月18日美国国会及行政部门中国问题委员会（Congressional-Executive Commission on China，简称CECC）听证会现场。（李莎／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2015年09月19日讯】（大纪元记者李辰美国华盛顿DC报导）中共国家主席<ahref="https://github.com/mmmcpr3473/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>访问美国前夕，美国国会及行政部门中国问题委员会（Congressional-Executive Commission on China，简称CECC）于9月18日举行大型<ahref="https://github.com/mmmcpr3473/djy/blob/master/gb/tag/%E4%BA%BA%E6%9D%83.md#1">人权</a>听证会。参加听证会的知名专家和国会议员希望<ahref="https://github.com/mmmcpr3473/djy/blob/master/gb/tag/%E5%A5%A5%E5%B7%B4%E9%A9%AC.md#1">奥巴马</a>总统在与<ahref="https://github.com/mmmcpr3473/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的会晤中要求中共：停止迫害<ahref="https://github.com/mmmcpr3473/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>、基督教徒、维吾尔人、人权律师、藏人等人士；停止强摘器官；要求奥巴马提出和关注中共非法拘禁、酷刑折磨公民，恢复法制、中国网络自由等多方面人权自由议题。</p>
-<p>参加这次听证会的国会议员包括CECC主席、资深众议员史密斯（Chris Smith）、参议员柯顿（ Tom Cotton）、众议员Robert Pittenger ；知名专家包括：前美国智库研究员、《大屠杀》《失去新中国》作者、独立记者伊森?葛特曼（Ethan Gutmann），哈佛大学访问学者、中国<ahref="https://github.com/mmmcpr3473/djy/blob/master/gb/tag/%E4%BA%BA%E6%9D%83.md#1">人权</a>律师滕彪，魏京生基金会主席、人权活动领袖魏京生，自由亚洲电台记者Shohret Hoshur ，中国数字时代网站的创办人和主编萧强，公民自由力量的主席杨建利等。</p>
+	<p>【大纪元2015年09月19日讯】（大纪元记者李辰美国华盛顿DC报导）中共国家主席<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>访问美国前夕，美国国会及行政部门中国问题委员会（Congressional-Executive Commission on China，简称CECC）于9月18日举行大型<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BA%BA%E6%9D%83.md#1">人权</a>听证会。参加听证会的知名专家和国会议员希望<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%B7%B4%E9%A9%AC.md#1">奥巴马</a>总统在与<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的会晤中要求中共：停止迫害<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>、基督教徒、维吾尔人、人权律师、藏人等人士；停止强摘器官；要求奥巴马提出和关注中共非法拘禁、酷刑折磨公民，恢复法制、中国网络自由等多方面人权自由议题。</p>
+<p>参加这次听证会的国会议员包括CECC主席、资深众议员史密斯（Chris Smith）、参议员柯顿（ Tom Cotton）、众议员Robert Pittenger ；知名专家包括：前美国智库研究员、《大屠杀》《失去新中国》作者、独立记者伊森?葛特曼（Ethan Gutmann），哈佛大学访问学者、中国<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BA%BA%E6%9D%83.md#1">人权</a>律师滕彪，魏京生基金会主席、人权活动领袖魏京生，自由亚洲电台记者Shohret Hoshur ，中国数字时代网站的创办人和主编萧强，公民自由力量的主席杨建利等。</p>
 <figure id="attachment_6501025" aria-describedby="caption-attachment-6501025" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/09/1509191157522192-600x387.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2015/09/1509191157522192-600x387.jpg" alt="9月18日美国国会及行政部门中国问题委员会（Congressional-Executive Commission on China，简称CECC）听证会现场。（李莎／大纪元）" title="9月18日美国国会及行政部门中国问题委员会（Congressional-Executive Commission on China，简称CECC）听证会现场。（李莎／大纪元）" width="600" b="387"
 	class="size-large wp-image-6501025" /></a><figcaption id="caption-attachment-6501025" class="wp-caption-text">9月18日美国国会及行政部门中国问题委员会（Congressional-Executive Commission on China，简称CECC）听证会现场。（李莎／大纪元）</figcaption></figure>
 <figure id="attachment_6501041" aria-describedby="caption-attachment-6501041" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/09/1509191158062192-600x401.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2015/09/1509191158062192-600x401.jpg" alt="9月18日美国国会及行政部门中国问题委员会（Congressional-Executive Commission on China，简称CECC）听证会现场。（李莎／大纪元）" title="9月18日美国国会及行政部门中国问题委员会（Congressional-Executive Commission on China，简称CECC）听证会现场。（李莎／大纪元）" width="600" b="401"
 	class="size-large wp-image-6501041" /></a><figcaption id="caption-attachment-6501041" class="wp-caption-text">9月18日美国国会及行政部门中国问题委员会（Congressional-Executive Commission on China，简称CECC）听证会现场。（李莎／大纪元）</figcaption></figure>
-<p><h2>葛特曼：被强摘器官的<ahref="https://github.com/mmmcpr3473/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员数量实际远超原来估计希望美国禁止前往中国器官移植旅游</h2>
+<p><h2>葛特曼：被强摘器官的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员数量实际远超原来估计希望美国禁止前往中国器官移植旅游</h2>
 <p>前美国智库研究员、《大屠杀》《失去新中国》作者、独立记者伊森?葛特曼（Ethan Gutmann）关注中共活摘法轮功学员器官问题，他在听证会现场公开中共强摘器官的时间表：</p>
 <figure id="attachment_6501054" aria-describedby="caption-attachment-6501054" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/09/1509191157372192-600x416.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2015/09/1509191157372192-600x416.jpg" alt="前美国智库研究员、《大屠杀》《失去新中国》作者、独立记者伊森?葛特曼（Ethan Gutmann）图为葛特曼展示他的著作、活摘器官调查结果《大屠杀》（李莎／大纪元）" title="前美国智库研究员、《大屠杀》《失去新中国》作者、独立记者伊森?葛特曼（Ethan Gutmann）图为葛特曼展示他的著作、活摘器官调查结果《大屠杀》（李莎／大纪元）" width="600" b="416"
 	class="size-large wp-image-6501054" /></a><figcaption id="caption-attachment-6501054" class="wp-caption-text">前美国智库研究员、《大屠杀》《失去新中国》作者、独立记者伊森?葛特曼（Ethan Gutmann）图为葛特曼展示他的著作、活摘器官调查结果《大屠杀》（李莎／大纪元）</figcaption></figure>
@@ -30,7 +30,7 @@
 <figure id="attachment_6501069" aria-describedby="caption-attachment-6501069" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/09/1509191157292192-600x395.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2015/09/1509191157292192-600x395.jpg" alt="前美国智库研究员、《大屠杀》《失去新中国》作者、独立记者伊森?葛特曼（Ethan Gutmann）图为葛特曼展示“追查迫害法轮功国际组织”的调查结果材料（李莎／大纪元）" title="前美国智库研究员、《大屠杀》《失去新中国》作者、独立记者伊森?葛特曼（Ethan Gutmann）图为葛特曼展示“追查迫害法轮功国际组织”的调查结果材料（李莎／大纪元）" width="600" b="395"
 	class="size-large wp-image-6501069" /></a><figcaption id="caption-attachment-6501069" class="wp-caption-text">前美国智库研究员、《大屠杀》《失去新中国》作者、独立记者伊森?葛特曼（Ethan Gutmann）图为葛特曼展示“追查迫害法轮功国际组织”的调查结果材料（李莎／大纪元）</figcaption></figure>
 <p>他在听证会的最后向议员提出，希望美国参照以色列和台湾的做法，禁止（美国人）前往中国进行器官移植旅游。</p>
-<p><h2>滕彪：<ahref="https://github.com/mmmcpr3473/djy/blob/master/gb/tag/%E5%A5%A5%E5%B7%B4%E9%A9%AC.md#1">奥巴马</a>应该在“停止迫害法轮功、家庭教会、人权团体”等议题上向习近平提出明确的信息 帮助将江泽民绳之以法</h2>
+<p><h2>滕彪：<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%B7%B4%E9%A9%AC.md#1">奥巴马</a>应该在“停止迫害法轮功、家庭教会、人权团体”等议题上向习近平提出明确的信息 帮助将江泽民绳之以法</h2>
 <p>哈佛访问学者、中国大陆著名人权律师滕彪在国会听证会现场接受大纪元采访表示：“对法轮功的迫害是一个非常重要的人权问题，奥巴马应该提出。奥巴马在具体问题上有一个明确的态度，包括释放政治犯，包括停止迫害法轮功和家庭教会，还有其它的人权团体，都要有非常明确和具体的信息。”</p>
 <figure id="attachment_6501081" aria-describedby="caption-attachment-6501081" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/09/1509191157552192-600x415.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2015/09/1509191157552192-600x415.jpg" alt="哈佛大学访问学者、中国人权律师腾彪（李莎／大纪元）" title="哈佛大学访问学者、中国人权律师腾彪（李莎／大纪元）" width="600" b="415"
 	class="size-large wp-image-6501081" /></a><figcaption id="caption-attachment-6501081" class="wp-caption-text">哈佛大学访问学者、中国人权律师腾彪（李莎／大纪元）</figcaption></figure>
@@ -79,41 +79,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/13/6/8/n3889835.md#1">华府各方关注奥习会聚焦人权“活摘器官应纳入其中”</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/13/7/30/n3929431.md#1">美中人权对话 宗教自由委员会再吁美对中共施压</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/13/8/23/n3947264.md#1">中共活摘器官罪曝光 国际大事记 （二）</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/14/8/1/n4214076.md#1">公布周永康案前 美国点名释放前公安部司长李昌</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/6/8/n3889835.md#1">华府各方关注奥习会聚焦人权“活摘器官应纳入其中”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/7/30/n3929431.md#1">美中人权对话 宗教自由委员会再吁美对中共施压</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/8/23/n3947264.md#1">中共活摘器官罪曝光 国际大事记 （二）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/8/1/n4214076.md#1">公布周永康案前 美国点名释放前公安部司长李昌</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/3/n10612921.md#1" target="_blank">炮灰与英雄——中美韩战军人的命运</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/28/n11751194.md#1" target="_blank">【2019盘点】响彻世界政坛的正义之声</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/15/n10058256.md#1" target="_blank">林辉：老百姓恨日本人也恨八路军的背后</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/3/29/n2063507.md#1" target="_blank">是自焚还是骗局？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/5/28/n12983090.md#1">【未解之谜】神话还是真相？三星堆与山海经</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/3/n12997286.md#1">【小宇宙传说】古代瘟疫启示：一些人不染疫</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/5/28/n12982017.md#1">瘟神散疫失误错杀人 轮回堕凡间偿罪</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/1/n12992137.md#1">【忠义传】以身挡敌 曹操的首席保镖典韦</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/1/n12990856.md#1">他们生前为乞丐 为何死后能升天</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/3/n12996717.md#1">【思想领袖】诺曼尼：亚裔美国梦正迷失？</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/5/n13000497.md#1">【拍案惊奇】7常委6?4经历 疫源证人藏美情报局？</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/5/n13001155.md#1">【唐浩视界】百万疫苗急援台湾 重挫中共逼统</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/4/n13000101.md#1">【新闻看点】广州疫控升级封城近 蓬佩奥遇内敌？</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/5/n13000973.md#1">中共阻日疫苗专机飞台 日防相紧盯 美机现踪</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/5/n13002032.md#1">王友群：中共为什么阻挠台湾获得德日疫苗？</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/4/n12999803.md#1">胡歌观看前女友演音乐剧 分手12年再传复合？</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/4/n12999132.md#1">林志玲护台抗疫 隔海捐6座“正压检疫亭”</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/4/n13000154.md#1">蒋欣晒吃饭自拍照 网民：难怪能瘦那么多</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/4/n13000002.md#1">一众港星悼“六四” 杜汶泽讽中共掩盖罪行</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/5/n13001209.md#1">《Sweet Tooth：鹿角男孩》影评：儿童外貌改变 也带来全新冲突</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/3/n12997286.md#1">【小宇宙传说】古代瘟疫启示：一些人不染疫</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/6/n13003685.md#1">国药、科兴疫苗 你不知道的2件事</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/5/n13001295.md#1">美农业部：吃太多鹰嘴豆泥可能对健康有害</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/3/n12997217.md#1">芒种节气梅雨至！1招泡澡和3食疗 袪湿清热瘦身</a></li>
-<li><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/21/6/6/n13002619.md#1">美国女子46年前遗失皮夹 终于找到了</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mmmcpr3473/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mmmcpr3473/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/9/19/n4531524.htm">美国会听证 要求在奥习会提出停止迫害法轮功等问题</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/9/19/n4531524.htm">美国会听证 要求在奥习会提出停止迫害法轮功等问题</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mmmcpr3473/djy/blob/master/gb/15/9/19/n4531524.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mmmcpr3473/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mmmcpr3473/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mmmcpr3473/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mmmcpr3473/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/15/9/19/n4531524.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
